--- a/.theia/settings.json
+++ b/.theia/settings.json
@@ -17,5 +17,6 @@
       "**/.theia": true,
    },
 "emmet.extensionsPath": ".theia",
-"editor.autoSave": "on"
+"editor.autoSave": "on",
+"prettier.tabWidth": 2
 }
